force-app/main/default/objects/Integration_User_Tradesite__c/Integration_User_Tradesite__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Credentials for tradesite user</description>
    <label>Integration User Tradesite</label>
</CustomObject>