force-app/main/default/objects/Integration_User_Tradesite__c/fields/ApprovedText__c.field-meta.xml
<CustomField>
    <fullName>ApprovedText__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ApprovedText</label>
    <length>20</length>
    <type>Text</type>
</CustomField>