force-app/main/default/objects/Integration_User_Tradesite__c/fields/Authentication_Endpoint_URL__c.field-meta.xml
<CustomField>
    <fullName>Authentication_Endpoint_URL__c</fullName>
    <description>URL for authentication to be specified to get access token</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Authentication Endpoint URL</label>
    <length>100</length>
    <type>Text</type>
</CustomField>