force-app/main/default/objects/Integration_User_Tradesite__c/fields/Client_Id__c.field-meta.xml
<CustomField>
    <fullName>Client_Id__c</fullName>
    <description>To Store Client Ids for OAuth Authentications</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Client Id</label>
    <length>200</length>
    <type>Text</type>
</CustomField>