force-app/main/default/objects/Integration_User_Tradesite__c/fields/Client_Secret__c.field-meta.xml
<CustomField>
    <fullName>Client_Secret__c</fullName>
    <description>To Store Client Secret for OAuth Authentication</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Client Secret</label>
    <length>200</length>
    <type>Text</type>
</CustomField>