force-app/main/default/objects/Integration_User_Tradesite__c/fields/NameChangeEndNumber__c.field-meta.xml
<CustomField>
    <fullName>NameChangeEndNumber__c</fullName>
    <label>NameChangeEndNumber</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>