force-app/main/default/objects/Integration_User_Tradesite__c/fields/NameChangeLastNumber__c.field-meta.xml
<CustomField>
    <fullName>NameChangeLastNumber__c</fullName>
    <label>NameChangeLastNumber</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>