force-app/main/default/objects/Integration_User_Tradesite__c/fields/NameChangeStartNumber__c.field-meta.xml
<CustomField>
    <fullName>NameChangeStartNumber__c</fullName>
    <label>NameChangeStartNumber</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>