force-app/main/default/objects/Integration_User_Tradesite__c/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Password</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>