force-app/main/default/objects/Integration_User_Tradesite__c/fields/RejectedText__c.field-meta.xml
<CustomField>
    <fullName>RejectedText__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RejectedText</label>
    <length>20</length>
    <type>Text</type>
</CustomField>