force-app/main/default/objects/Integration_User_Tradesite__c/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Username</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>